# perfect-dcox

./: .env.example  .gitignore  README.md  plan.md  requirements.txt  vercel.json
api/: index.py
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py  models.py
backend/app/agents/: __init__.py  extraction.py  requirements.py  style_sample_extractor.py
backend/app/api/: __init__.py  batches.py  files.py  jobs.py  profile_extractions.py  profiles.py  quality_reports.py  requirement_sessions.py
backend/app/core/: __init__.py  config.py
backend/app/documents/: __init__.py  compiler.py  converter.py  exporter.py  formatter.py  ooxml.py  parser.py  rule_registry.py  service.py  structure.py  template.py
backend/app/jobs/: __init__.py  worker.py
backend/app/llm/: diagnostics.py  openai_compat.py
backend/app/profiles/: __init__.py  models.py  seed.py
backend/app/quality/: __init__.py  delivery_gate.py  final_layout_review.py  fix_execution.py  fix_planning.py  inspection.py  service.py
backend/app/storage/: __init__.py  local.py  repository.py
backend/tests/: document_fixtures.py  test_document_engine.py  test_document_formatting.py  test_document_worker.py  test_foundation.py  test_production_profile_pipeline.py  test_profile_extractions.py  test_profile_extractions_api.py  test_profiles.py  test_profiles_api.py  test_quality_reports.py  test_quality_reports_api.py  test_requirement_sessions_api.py  test_rule_registry.py
docs/: module-tree.md  production-format-upgrade-change-document.md  real-progress-status-2026-06-12.md  (+1 more)
(+80 files in other folders)
